# vtag

./: .goreleaser.yaml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test-build.yml
src/: cli.rs  git.rs  main.rs  tag.rs
