[package]
name = "vtag"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
git2 = { version = "0.20.2", default-features = false }
inquire = "0.9.1"
octocrab = "0.49.0"
once_cell = "1.21.3"
regex = "1.12.2"
semver = "1.0.27"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
